--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node ./prisma/seed.ts"
+  },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -17,6 +20,7 @@
     "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
     "iron-session": "^8.0.1",
+    "iso-country-currency": "^0.7.2",
     "next": "14.0.3",
     "prisma": "^5.6.0",
     "react": "^18",
@@ -26,7 +30,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.2.41",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
