--- a/package.json
+++ b/package.json
@@ -8,42 +8,25 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "prisma": {
-    "seed": "ts-node ./prisma/seed.ts"
-  },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.19",
-    "@mui/joy": "^5.0.0-beta.16",
-    "@mui/material": "^5.14.19",
-    "@mui/x-charts": "^7.0.0-alpha.4",
-    "@prisma/client": "^5.6.0",
-    "bcrypt": "^5.1.1",
-    "iron-session": "^8.0.1",
-    "iso-country-currency": "^0.7.2",
-    "next": "14.0.3",
-    "prisma": "^5.6.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "swr": "^2.2.4",
+    "next": "^14.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
     "@types/react": "^18.2.41",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8.55.0",
-    "eslint-config-next": "14.0.3",
+    "eslint": "^9.5.0",
+    "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
+    "eslint-plugin-unused-imports": "^4.0.0",
     "postcss": "^8",
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.0",
