--- a/package.json
+++ b/package.json
@@ -9,17 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.2.0",
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
+    "add": "^2.0.6",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.31.2",
+    "drizzle-zod": "^0.5.1",
+    "lucia": "^3.2.0",
     "next": "^14.2.4",
+    "oslo": "^1.2.0",
+    "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "require-env": "^0.2.1",
+    "yarn": "^1.22.22",
+    "zod": "^3.23.8",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/node": "20.14.2",
     "@types/react": "^18.2.41",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.22.7",
     "eslint": "^9.5.0",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
@@ -30,6 +45,6 @@
     "postcss": "^8",
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.5"
   }
 }
